Update headings and floating elements in comtador.html

--- a/comtador.html
+++ b/comtador.html
@@ -115,14 +115,14 @@ button {
 
 <!-- ZONA 1 -->
 <section class="romantica">
-    <h1>Fíjate tú cuánto tiempo llevas queriéndome</h1>
+    <h1>🤍¿sabias el tiempo exacto que llevamos juntos?🤍</h1>
     <div id="contador1" class="contador"></div>
     <div id="foto1" class="foto"></div>
 </section>
 
 <!-- ZONA 2 -->
 <section class="romantica2">
-    <h1>Este es el tiempo que llevas escribiéndome buenas noches todos los días</h1>
+    <h1>este es el tiempo que ha pasado desde que te creiste que soy del athetic</h1>
     <div id="contador2" class="contador"></div>
     <div id="foto2" class="foto"></div>
 </section>
@@ -268,8 +268,8 @@ setInterval(() => {
 rotarFotos("foto1", "zona1", 6);
 rotarFotos("foto2", "zona2", 6);
 
-crearFlotantes(document.querySelector(".romantica"), ["❤️","💋"], 25);
-crearFlotantes(document.querySelector(".romantica2"), ["❤️","💋"], 25);
+crearFlotantes(document.querySelector(".romantica"), ["🤍","💋"], 25);
+crearFlotantes(document.querySelector(".romantica2"), ["🤍","😽"], 25);
 crearFlotantes(document.querySelector(".navidad"), ["🎄","❄️","🎁"], 30);
 
 pintarCustom();
