--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ button {
 
 <!-- ZONA 2 -->
 <section class="romantica2">
-    <h1>este es el tiempo que ha pasado desde que te creiste que soy del athetic</h1>
+    <h1>este es el tiempo que ha pasado desde que te creiste que soy del athletic</h1>
     <div id="contador2" class="contador"></div>
     <div id="foto2" class="foto"></div>
 </section>
