--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@ section {
     overflow: hidden;
     text-align: center;
     padding: 60px 20px;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    transition: background-image 1.5s ease-in-out;
 }
 
 h1 {
@@ -35,25 +39,15 @@ h1 {
     margin-bottom: 20px;
 }
 
-.foto {
-    width: 280px;
-    height: 280px;
-    margin: 0 auto 20px;
-    border-radius: 20px;
-    background-size: cover;
-    background-position: center;
-    transition: opacity 1.5s;
-}
-
 /* SECCIONES */
 .romantica {
-    background: linear-gradient(135deg, #3a0f2e, #1a0b1c);
+    background-image: url("imagenes/zona1/1.jpg");
 }
 .romantica2 {
-    background: linear-gradient(135deg, #0f1c3a, #0b112a);
+    background-image: url("imagenes/zona2/1.jpg");
 }
 .navidad {
-    background: linear-gradient(135deg, #0b3d2e, #14532d);
+    background-image: url("imagenes/navidad/fondo.jpg");
 }
 .navidad h1 {
     font-family: 'Mountains of Christmas', cursive;
@@ -92,21 +86,11 @@ button {
     cursor: pointer;
 }
 
-/* ===== ADAPTACIÓN MÓVIL ===== */
+/* MÓVIL */
 @media (max-width: 768px) {
-    h1 {
-        font-size: 2.2em;
-    }
-    .contador {
-        font-size: 1.3em;
-    }
-    .foto {
-        width: 220px;
-        height: 220px;
-    }
-    section {
-        padding: 40px 15px;
-    }
+    h1 { font-size: 2.2em; }
+    .contador { font-size: 1.3em; }
+    section { padding: 40px 15px; }
 }
 </style>
 </head>
@@ -115,23 +99,20 @@ button {
 
 <!-- ZONA 1 -->
 <section class="romantica">
-    <h1>🤍¿sabias el tiempo exacto que llevamos juntos?🤍</h1>
+    <h1>🤍 ¿sabías el tiempo exacto que llevamos juntos? 🤍</h1>
     <div id="contador1" class="contador"></div>
-    <div id="foto1" class="foto"></div>
 </section>
 
 <!-- ZONA 2 -->
 <section class="romantica2">
-    <h1>este es el tiempo que ha pasado desde que te creiste que soy del athletic</h1>
+    <h1>El tiempo desde que te creíste que soy del Athletic</h1>
     <div id="contador2" class="contador"></div>
-    <div id="foto2" class="foto"></div>
 </section>
 
 <!-- NAVIDAD -->
 <section class="navidad">
     <h1>🎄 Tiempo que falta para Navidad 🎄</h1>
     <div id="contadorNavidad" class="contador"></div>
-    <div class="foto" style="background-image:url('imagenes/navidad/fondo.jpg')"></div>
 </section>
 
 <!-- CONTADORES PERSONALIZADOS -->
@@ -149,11 +130,11 @@ button {
 </section>
 
 <script>
-/* ===== FECHAS BASE ===== */
+/* FECHAS BASE */
 const fecha1 = new Date(2025, 8, 30, 14, 35);
 const fecha2 = new Date(2025, 7, 14, 19, 0);
 
-/* ===== CONTAR DESDE ===== */
+/* CONTADOR */
 function contarDesde(fecha, id) {
     const ahora = new Date();
     let s = Math.floor((ahora - fecha) / 1000);
@@ -167,26 +148,25 @@ function contarDesde(fecha, id) {
         `${d} días, ${h} horas, ${m} minutos y ${s} segundos`;
 }
 
-/* ===== NAVIDAD ===== */
+/* NAVIDAD */
 function actualizarNavidad() {
     const ahora = new Date();
     let navidad = new Date(ahora.getFullYear(), 11, 25);
     if (ahora > navidad) navidad.setFullYear(navidad.getFullYear() + 1);
-    const diff = new Date(ahora - (navidad - ahora));
-    contarDesde(diff, "contadorNavidad");
+    contarDesde(ahora - (navidad - ahora), "contadorNavidad");
 }
 
-/* ===== FOTOS ROTATIVAS ===== */
-function rotarFotos(id, carpeta, total) {
+/* ROTAR FONDOS */
+function rotarFondos(seccion, carpeta, total) {
     let i = 1;
     setInterval(() => {
-        document.getElementById(id).style.backgroundImage =
+        seccion.style.backgroundImage =
             `url('imagenes/${carpeta}/${i}.jpg')`;
         i = i % total + 1;
     }, 3000);
 }
 
-/* ===== FLOTANTES ===== */
+/* FLOTANTES */
 function crearFlotantes(seccion, emojis, cantidad) {
     for (let i = 0; i < cantidad; i++) {
         const e = document.createElement("div");
@@ -199,7 +179,7 @@ function crearFlotantes(seccion, emojis, cantidad) {
     }
 }
 
-/* ===== CUSTOM PERSISTENTE ===== */
+/* CUSTOM PERSISTENTE */
 let contadoresCustom = JSON.parse(localStorage.getItem("contadoresCustom")) || [];
 
 function guardarCustom() {
@@ -229,32 +209,37 @@ function borrarCustom(id) {
     pintarCustom();
 }
 
-document.getElementById("formCustom").addEventListener("submit", e => {
+formCustom.addEventListener("submit", e => {
     e.preventDefault();
-
-    const titulo = tituloCustom.value;
-    const fecha = new Date(fechaCustom.value);
-    const file = fotoCustom.files[0];
     const id = Date.now();
 
-    if (file) {
+    if (fotoCustom.files[0]) {
         const reader = new FileReader();
         reader.onload = () => {
-            contadoresCustom.push({ id, titulo, fecha: fecha.getTime(), imagen: reader.result });
+            contadoresCustom.push({
+                id,
+                titulo: tituloCustom.value,
+                fecha: new Date(fechaCustom.value).getTime(),
+                imagen: reader.result
+            });
             guardarCustom();
             pintarCustom();
         };
-        reader.readAsDataURL(file);
+        reader.readAsDataURL(fotoCustom.files[0]);
     } else {
-        contadoresCustom.push({ id, titulo, fecha: fecha.getTime(), imagen: null });
+        contadoresCustom.push({
+            id,
+            titulo: tituloCustom.value,
+            fecha: new Date(fechaCustom.value).getTime(),
+            imagen: null
+        });
         guardarCustom();
         pintarCustom();
     }
-
     e.target.reset();
 });
 
-/* ===== LOOP ===== */
+/* LOOP */
 setInterval(() => {
     contarDesde(fecha1, "contador1");
     contarDesde(fecha2, "contador2");
@@ -264,9 +249,9 @@ setInterval(() => {
     );
 }, 1000);
 
-/* ===== INICIO ===== */
-rotarFotos("foto1", "zona1", 6);
-rotarFotos("foto2", "zona2", 6);
+/* INICIO */
+rotarFondos(document.querySelector(".romantica"), "zona1", 6);
+rotarFondos(document.querySelector(".romantica2"), "zona2", 6);
 
 crearFlotantes(document.querySelector(".romantica"), ["🤍","💋"], 25);
 crearFlotantes(document.querySelector(".romantica2"), ["🤍","😽"], 25);
